--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,7 +1,9 @@
 $red: red;
+$blue: blue;
 
 @mixin ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    color: blue;
 }
